--- a/part2.html
+++ b/part2.html
@@ -57,8 +57,6 @@ function create() {
 
     ledge.body.immovable = true;
 
-    game.add.sprite(0,0,'star');
-
     // The player and its settings
     player = game.add.sprite(32, game.world.height - 150, 'dude');
 
@@ -73,11 +71,34 @@ function create() {
     //  Our two animations, walking left and right.
     player.animations.add('left', [0, 1, 2, 3], 10, true);
     player.animations.add('right', [5, 6, 7, 8], 10, true);
+
+    stars = game.add.group();
+
+    stars.enableBody = true;
+
+    //  Here we'll create 12 of them evenly spaced apart
+    for (var i = 0; i < 12; i++)
+    {
+        //  Create a star inside of the 'stars' group
+        var star = stars.create(i * 70, 0, 'star');
+
+        //  Let gravity do its thing
+        star.body.gravity.y = 60;
+
+        //  This just gives each star a slightly random bounce value
+        star.body.bounce.y = 0.7 + Math.random() * 0.2;
+    }
 }
 
 function update() {
     //  Collide the player and the stars with the platforms
     var hitPlatform = game.physics.arcade.collide(player, platforms);
+
+    // stars hit ground
+    game.physics.arcade.collide(stars, platforms);
+
+    // check to collect star
+    game.physics.arcade.overlap(player, stars, collectStar, null, this);
 
     var cursors = game.input.keyboard.createCursorKeys();
 
@@ -111,6 +132,13 @@ function update() {
     {
         player.body.velocity.y = -350;
     }
+}
+
+function collectStar (player, star) {
+
+    // Removes the star from the screen
+    star.kill();
+
 }
 
 </script>
