--- a/part2.html
+++ b/part2.html
@@ -16,6 +16,9 @@
 
 var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create: create, update: update });
 
+var score = 0;
+var scoreText;
+
 function preload() {
 
     game.load.image('sky', 'assets/sky.png');
@@ -88,6 +91,8 @@ function create() {
         //  This just gives each star a slightly random bounce value
         star.body.bounce.y = 0.7 + Math.random() * 0.2;
     }
+
+    scoreText = game.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
 }
 
 function update() {
@@ -139,6 +144,9 @@ function collectStar (player, star) {
     // Removes the star from the screen
     star.kill();
 
+    //  Add and update the score
+    score += 10;
+    scoreText.text = 'Score: ' + score;
 }
 
 </script>
