fix global variable scope

--- a/part2.html
+++ b/part2.html
@@ -15,7 +15,10 @@
 <script type="text/javascript">
 
 var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create: create, update: update });
-
+var player;
+var platforms;
+var cursors;
+var stars;
 var score = 0;
 var scoreText;
 
@@ -105,7 +108,7 @@ function update() {
     // check to collect star
     game.physics.arcade.overlap(player, stars, collectStar, null, this);
 
-    var cursors = game.input.keyboard.createCursorKeys();
+    cursors = game.input.keyboard.createCursorKeys();
 
     //  Reset the players velocity (movement)
     player.body.velocity.x = 0;
