--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ var cursors;
 var stars;
 var score = 0;
 var scoreText;
+var timeBeginning = Date.now();
 
 function preload() {
 
@@ -32,6 +33,7 @@ function preload() {
 }
 
 function create() {
+    game.over = false;
 
     //  We're going to be using physics, so enable the Arcade Physics system
     game.physics.startSystem(Phaser.Physics.ARCADE);
@@ -99,47 +101,58 @@ function create() {
 }
 
 function update() {
-    //  Collide the player and the stars with the platforms
-    var hitPlatform = game.physics.arcade.collide(player, platforms);
 
-    // stars hit ground
-    game.physics.arcade.collide(stars, platforms);
+    if (!game.over) {
+        //  Collide the player and the stars with the platforms
+        var hitPlatform = game.physics.arcade.collide(player, platforms);
 
-    // check to collect star
-    game.physics.arcade.overlap(player, stars, collectStar, null, this);
+        // stars hit ground
+        game.physics.arcade.collide(stars, platforms);
 
-    cursors = game.input.keyboard.createCursorKeys();
+        // check to collect star
+        game.physics.arcade.overlap(player, stars, collectStar, null, this);
 
-    //  Reset the players velocity (movement)
-    player.body.velocity.x = 0;
+        cursors = game.input.keyboard.createCursorKeys();
 
-    if (cursors.left.isDown)
-    {
-        //  Move to the left
-        player.body.velocity.x = -150;
+        //  Reset the players velocity (movement)
+        player.body.velocity.x = 0;
 
-        player.animations.play('left');
+        if (cursors.left.isDown)
+        {
+            //  Move to the left
+            player.body.velocity.x = -150;
+
+            player.animations.play('left');
+        }
+        else if (cursors.right.isDown)
+        {
+            //  Move to the right
+            player.body.velocity.x = 150;
+
+            player.animations.play('right');
+        }
+        else
+        {
+            stopPlayer();
+        }
+
+        //  Allow the player to jump if they are touching the ground.
+        if (cursors.up.isDown && player.body.touching.down && hitPlatform)
+        {
+            player.body.velocity.y = -350;
+        }
+
+        if (Date.now() - timeBeginning > 10000) {
+            end();
+        }
     }
-    else if (cursors.right.isDown)
-    {
-        //  Move to the right
-        player.body.velocity.x = 150;
+}
 
-        player.animations.play('right');
-    }
-    else
-    {
-        //  Stand still
-        player.animations.stop();
+function stopPlayer() {
+    //  Stand still
+    player.animations.stop();
 
-        player.frame = 4;
-    }
-
-    //  Allow the player to jump if they are touching the ground.
-    if (cursors.up.isDown && player.body.touching.down && hitPlatform)
-    {
-        player.body.velocity.y = -350;
-    }
+    player.frame = 4;
 }
 
 function collectStar (player, star) {
@@ -150,6 +163,12 @@ function collectStar (player, star) {
     //  Add and update the score
     score += 10;
     scoreText.text = 'Score: ' + score;
+}
+
+function end() {
+    stopPlayer();
+    game.add.text(48, 48, 'Game Over', { fontSize: '64px', fill: 'red' });
+    game.over = true;
 }
 
 </script>
